--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <module>M1-InnerClasses</module>
         <module>M2-JavaFileOperations</module>
         <module>M3-Threading</module>
+        <module>M4-JBDC</module>
+        <module>M4-JBDC</module>
     </modules>
 
     <properties>
@@ -20,7 +22,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+
     <dependencies>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
